--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -150,7 +150,7 @@ outlier_table <- data.frame(
   median = median)
 # creation of the data frame outlier 
 outlier <- data.frame()
-# calculation of outlier 
+# calculation of outliers 
 for (i in 1:nrow(outlier_table)) {
   if(outlier_table$median[i] < mad) {
   outlier <- rbind(outlier, outlier_table[i,])
@@ -191,7 +191,18 @@ rRMSAnalyzer::plot_heatmap_corr(ribo_to_check,"Count")
 To identify distinct coverage profile, we compare the coverage profiles of all samples in the series. The Correspondence Analysis (COA) plot shows the distance between each sample based on its coverage profile. Samples that are far appart are considered putative outliers. At this stage, it is possible to visualise the bias linked to the sequencing batch or to evaluate the performance of the ComBat-seq correction algorithm if it has been applied (Zhang et al, 2020; Paraqindes et al, in revision).
 
 ```{r}
-rRMSAnalyzer::plot_coa(ribo_to_check,color_col = params$library_col)
+plot_coa <- rRMSAnalyzer::plot_coa(ribo_to_check,color_col = params$library_col)
+print(plot_coa)
+# assign a color in ribo_to_check (=ribo object) if sample is an outlier
+ribo_to_check$metadata$color <- ifelse(
+  ribo_to_check$metadata$samplename %in% outlier$key,
+  "outlier",  # les échantillons dans outlier
+  "normal"  # les autres échantillons
+)
+# Utiliser la colonne "color" dans le metadata pour colorier le plot
+plot_coa_binaire <- rRMSAnalyzer::plot_coa(ribo_to_check, color_col = "color")
+
+print(plot_coa_binaire)
 ```
 
 # C-scores analysis
